# kondo-libpython

./: .gitignore  README.org  deps.edn  flake.nix  pyproject.toml
.clj-kondo/: config.edn
.github/workflows/: lint.yml
src/: python.clj
